<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_sound_off">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/you_win"
                android:textColor="@color/blue_1"
                android:textSize="25dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/time"
                android:textColor="@color/blue_1"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="00:00"
                android:textColor="@color/blue_1"
                android:textSize="25dp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/btn_back_to_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_sound_on"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/back_to_menu"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>